--- a/pages/15898.html
+++ b/pages/15898.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -318,11 +318,11 @@ margin-left: 0em;
 </li>
 
 <li>
-<p><em>Higher-Dimensional Types in the Mechanization of Homotopy Theory</em>, PhD thesis 2017, (<a href='http://favonia.org/thesis.html'>webpage</a>, <a href='http://favonia.org/thesis.pdf'>pdf direct link</a>)</p>
+<p><em>Higher-Dimensional Types in the Mechanization of Homotopy Theory</em>, PhD thesis 2017, (<a href='http://favonia.org/thesis.html'>webpage</a>, <a href='http://favonia.org/files/thesis.pdf'>pdf direct link</a>)</p>
 </li>
 </ul>
 
-<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_d2566e50e559bd6430059414bd11774b684ae74f_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
+<h2 id='related_lab_entries'>related <math class='maruku-mathml' display='inline' id='mathml_e0d2c1330191d97aea017d2c44e13ef60575753c_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
 
 <ul>
 <li>
@@ -338,14 +338,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on May 23, 2017 22:55:49 
+  Revised on October  4, 2017 16:06:34 
   by <span class="newWikiWord">favonia<a href="/nlab/new/favonia">?</a></span>
-  (2602:306:305f:4770:461c:a8ff:fee1:dc23)
+  (192.16.204.250)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Favonia" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Favonia/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/Favonia" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Favonia" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Favonia" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Favonia/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Favonia" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Favonia" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
