--- a/pages/1785.html
+++ b/pages/1785.html
@@ -356,6 +356,12 @@ margin-left: 0em;
 </li>
 </ul>
 
+<h2 id='articles'>Articles</h2>
+
+<ul>
+<li><em>The origins and motivations for univalent foundations</em>, <a href='https://www.ias.edu/ideas/2014/voevodsky-origins'>I.A.S. website news</a>, 2014.</li>
+</ul>
+
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 
 <p>
@@ -368,14 +374,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on October  1, 2017 00:45:57 
-  by <a class="existingWikiWord" href="/nlab/show/David+Roberts">David Roberts</a>
-  (120.21.50.241)
+  Revised on October  5, 2017 02:07:10 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (95.144.140.57)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Vladimir+Voevodsky" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Vladimir+Voevodsky/18" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(18 revisions)</span> | <a href="/nlab/show/diff/Vladimir+Voevodsky" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Vladimir+Voevodsky" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Vladimir+Voevodsky" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Vladimir+Voevodsky/19" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(19 revisions)</span> | <a href="/nlab/show/diff/Vladimir+Voevodsky" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Vladimir+Voevodsky" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
