--- a/pages/10712.html
+++ b/pages/10712.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -555,19 +555,19 @@ margin-left: 0em;
 </div>
 
 <h1 id='contents'>Contents</h1>
-<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#statement'>Statement</a></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#consequences'>Consequences</a><ul><li><a href='#relation_with_fields'>Relation with <math class='maruku-mathml' display='inline' id='mathml_b696c0ecd82eac916a46c0adde718c174d96f2db_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-fields</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
+<div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#statement'>Statement</a></li><li><a href='#special_cases'>Special cases</a></li><li><a href='#consequences'>Consequences</a><ul><li><a href='#relation_with_fields'>Relation with <math class='maruku-mathml' display='inline' id='mathml_c9a925934d0b5ec811c0d4e555cd49f3fae81ece_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-fields</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
 <p>A fundamental statement in <a class='existingWikiWord' href='/nlab/show/stable+homotopy+theory'>stable homotopy theory</a>/<a class='existingWikiWord' href='/nlab/show/higher+algebra'>higher algebra</a>/<a class='existingWikiWord' href='/nlab/show/chromatic+homotopy+theory'>chromatic homotopy theory</a>.</p>
 
 <h2 id='statement'>Statement</h2>
 
-<p>For any <a class='existingWikiWord' href='/nlab/show/E-infinity-ring'>E-∞ ring</a> <math class='maruku-mathml' display='inline' id='mathml_b696c0ecd82eac916a46c0adde718c174d96f2db_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi></mrow><annotation encoding='application/x-tex'>E</annotation></semantics></math> the <a class='existingWikiWord' href='/nlab/show/fiber+sequence'>homotopy kernel</a> of the canonical <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a></p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b696c0ecd82eac916a46c0adde718c174d96f2db_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mo>•</mo></msub><mi>R</mi><mo>⟶</mo><msub><mi>MU</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
+<p>For any <a class='existingWikiWord' href='/nlab/show/ring+spectrum'>ring spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_c9a925934d0b5ec811c0d4e555cd49f3fae81ece_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>E</mi></mrow><annotation encoding='application/x-tex'>E</annotation></semantics></math> the kernel of the canonical <a class='existingWikiWord' href='/nlab/show/morphism'>morphism</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_c9a925934d0b5ec811c0d4e555cd49f3fae81ece_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>π</mi> <mo>•</mo></msub><mi>R</mi><mo>⟶</mo><msub><mi>MU</mi> <mo>•</mo></msub><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>
   \pi_\bullet R \longrightarrow MU_\bullet(R)
 
 </annotation></semantics></math></div>
-<p>to the <a class='existingWikiWord' href='/nlab/show/MU'>complex cobordism</a> <a class='existingWikiWord' href='/nlab/show/generalized+homology'>generalized homology theory</a> of <math class='maruku-mathml' display='inline' id='mathml_b696c0ecd82eac916a46c0adde718c174d96f2db_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> consists of <a class='existingWikiWord' href='/nlab/show/nilpotent+element'>nilpotent elements</a>.</p>
+<p>to the <a class='existingWikiWord' href='/nlab/show/MU'>MU</a>-homology of <math class='maruku-mathml' display='inline' id='mathml_c9a925934d0b5ec811c0d4e555cd49f3fae81ece_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> consists of <a class='existingWikiWord' href='/nlab/show/nilpotent+element'>nilpotent elements</a>.</p>
 
 <p>This is due to <a class='existingWikiWord' href='/nlab/show/Ethan+Devinatz'>Ethan Devinatz</a>, <a class='existingWikiWord' href='/nlab/show/Michael+Hopkins'>Mike Hopkins</a>, and <a class='existingWikiWord' href='/nlab/show/Jeff+Smith'>Jeff Smith</a>. See <a href='#Lurie10'>Lurie 10, theorem 3</a></p>
 
@@ -575,11 +575,13 @@ margin-left: 0em;
 
 <p>The Nishida nilpotence theorem (<a href='#Nishida73'>Nishida 73</a>) is the special case for the <a class='existingWikiWord' href='/nlab/show/sphere+spectrum'>sphere spectrum</a>, saying that all positive-degree elements in the <a class='existingWikiWord' href='/nlab/show/homotopy+groups+of+spheres'>stable homotopy groups of spheres</a> are nilpotent.</p>
 
+<p>This is indeed a special case. The <a class='existingWikiWord' href='/nlab/show/MU'>MU</a>-homology of the sphere spectrum is the <a href='https://ncatlab.org/nlab/show/MU#homotopy_groups_cobordism_and_lazard_ring'>Lazard ring</a> and hence is torsion-free. Whereas all positive-degree elements of the stable homotopy ring are torsion by <a class='existingWikiWord' href='/nlab/show/Serre+finiteness+theorem'>Serre finiteness theorem</a> and therefore belong to the aforementioned kernel.</p>
+
 <h2 id='consequences'>Consequences</h2>
 
-<h3 id='relation_with_fields'>Relation with <math class='maruku-mathml' display='inline' id='mathml_b696c0ecd82eac916a46c0adde718c174d96f2db_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-fields</h3>
+<h3 id='relation_with_fields'>Relation with <math class='maruku-mathml' display='inline' id='mathml_c9a925934d0b5ec811c0d4e555cd49f3fae81ece_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>∞</mn></mrow><annotation encoding='application/x-tex'>\infty</annotation></semantics></math>-fields</h3>
 
-<p>The nilpotence theorem implies that every <a class='existingWikiWord' href='/nlab/show/infinity-field'>∞-field</a> is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a> over the <a class='existingWikiWord' href='/nlab/show/Morava+K-theory'>Morava K-theory</a> <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_b696c0ecd82eac916a46c0adde718c174d96f2db_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(n)</annotation></semantics></math>, for some <math class='maruku-mathml' display='inline' id='mathml_b696c0ecd82eac916a46c0adde718c174d96f2db_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>. See at <em><a class='existingWikiWord' href='/nlab/show/infinity-field'>∞-field</a></em>.</p>
+<p>The nilpotence theorem implies that every <a class='existingWikiWord' href='/nlab/show/infinity-field'>∞-field</a> is an <a class='existingWikiWord' href='/nlab/show/%28infinity%2C1%29-module'>∞-module</a> over the <a class='existingWikiWord' href='/nlab/show/Morava+K-theory'>Morava K-theory</a> <a class='existingWikiWord' href='/nlab/show/spectrum'>spectrum</a> <math class='maruku-mathml' display='inline' id='mathml_c9a925934d0b5ec811c0d4e555cd49f3fae81ece_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>K</mi><mo stretchy='false'>(</mo><mi>n</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>K(n)</annotation></semantics></math>, for some <math class='maruku-mathml' display='inline' id='mathml_c9a925934d0b5ec811c0d4e555cd49f3fae81ece_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>. See at <em><a class='existingWikiWord' href='/nlab/show/infinity-field'>∞-field</a></em>.</p>
 
 <h2 id='related_concepts'>Related concepts</h2>
 
@@ -614,14 +616,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on January 26, 2016 13:16:52 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (194.210.233.49)
+  Revised on October  8, 2017 18:44:20 
+  by <span class="newWikiWord">ボバ<a href="/nlab/new/%E3%83%9C%E3%83%90">?</a></span>
+  (178.162.9.95)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/nilpotence+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nilpotence+theorem/3" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(3 revisions)</span> | <a href="/nlab/show/diff/nilpotence+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nilpotence+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/nilpotence+theorem" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/nilpotence+theorem/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/nilpotence+theorem" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/nilpotence+theorem" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
