--- a/pages/2797.html
+++ b/pages/2797.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -758,7 +758,7 @@ margin-left: 0em;
 <div class='maruku_toc'><ul><li><a href='#idea'>Idea</a></li><li><a href='#properties'>Properties</a><ul><li><a href='#coherence_theorem'>Coherence theorem</a></li><li><a href='#picard_2groupoid'>Picard 2-groupoid</a></li></ul></li><li><a href='#related_concepts'>Related concepts</a></li><li><a href='#references'>References</a></li></ul></div>
 <h2 id='idea'>Idea</h2>
 
-<p>A <em>braided monoidal 2-category</em> is a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_9e6e2ad60462ac5e7e773676218ca2cf740c83ca_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> equipped with a <a class='existingWikiWord' href='/nlab/show/tensor+product'>tensor product</a> <math class='maruku-mathml' display='inline' id='mathml_9e6e2ad60462ac5e7e773676218ca2cf740c83ca_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo><mo>:</mo><mi>C</mi><mo>×</mo><mi>C</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>\otimes : C \times C \to C</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a> which satisfies the first in a hierarchy of conditions for being commutative up to equivalence: in the language of <a class='existingWikiWord' href='/nlab/show/k-tuply+monoidal+n-category'>k-tuply monoidal n-categories</a> a braided monoidal 2-category is a <strong>doubly monoidal 2-category<em>.</em></strong></p>
+<p>A <em>braided monoidal 2-category</em> is a <a class='existingWikiWord' href='/nlab/show/2-category'>2-category</a> <math class='maruku-mathml' display='inline' id='mathml_82eba15b976d75d456fe45a4895a6026196d9840_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>C</mi></mrow><annotation encoding='application/x-tex'>C</annotation></semantics></math> equipped with a <a class='existingWikiWord' href='/nlab/show/tensor+product'>tensor product</a> <math class='maruku-mathml' display='inline' id='mathml_82eba15b976d75d456fe45a4895a6026196d9840_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊗</mo><mo>:</mo><mi>C</mi><mo>×</mo><mi>C</mi><mo>→</mo><mi>C</mi></mrow><annotation encoding='application/x-tex'>\otimes : C \times C \to C</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/2-functor'>2-functor</a> which satisfies the first in a hierarchy of conditions for being commutative up to equivalence: in the language of <a class='existingWikiWord' href='/nlab/show/k-tuply+monoidal+n-category'>k-tuply monoidal n-categories</a> a braided monoidal 2-category is a <strong>doubly monoidal 2-category<em>.</em></strong></p>
 
 <p>As described there, this may be identified with a pointed <a class='existingWikiWord' href='/nlab/show/tetracategory'>4-category</a> with a single <a class='existingWikiWord' href='/nlab/show/object'>object</a> and a single <a class='existingWikiWord' href='/nlab/show/1-morphism'>1-morphism</a>.</p>
 
@@ -802,7 +802,7 @@ margin-left: 0em;
 
 <ul>
 <li id='Breen88'>
-<p><a class='existingWikiWord' href='/nlab/show/Lawrence+Breen'>Lawrence Breen</a>, <em>Une lettre à P. Deligne au sujet des <math class='maruku-mathml' display='inline' id='mathml_9e6e2ad60462ac5e7e773676218ca2cf740c83ca_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-catégories tressées</em> (1988) (<a href='http://www.math.univ-paris13.fr/~breen/deligne.pdf'>pdf</a>)</p>
+<p><a class='existingWikiWord' href='/nlab/show/Lawrence+Breen'>Lawrence Breen</a>, <em>Une lettre à P. Deligne au sujet des <math class='maruku-mathml' display='inline' id='mathml_82eba15b976d75d456fe45a4895a6026196d9840_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mn>2</mn></mrow><annotation encoding='application/x-tex'>2</annotation></semantics></math>-catégories tressées</em> (1988) (<a href='http://www.math.univ-paris13.fr/~breen/deligne.pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -819,18 +819,20 @@ margin-left: 0em;
 </ul>
 
 <p>
+ 
+ 
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on March  4, 2016 19:09:07 
-  by <a class="existingWikiWord" href="/nlab/show/John+Baez">John Baez</a>
-  (99.11.156.244)
+  Revised on October 10, 2017 16:59:37 
+  by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/braided+monoidal+2-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/braided+monoidal+2-category/8" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(8 revisions)</span> | <a href="/nlab/show/diff/braided+monoidal+2-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/braided+monoidal+2-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/braided+monoidal+2-category" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/braided+monoidal+2-category/9" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(9 revisions)</span> | <a href="/nlab/show/diff/braided+monoidal+2-category" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/braided+monoidal+2-category" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
