--- a/pages/3761.html
+++ b/pages/3761.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -764,11 +764,11 @@ margin-left: 0em;
 
 <h2 id='Examples'>Examples</h2>
 
-<p>For <math class='maruku-mathml' display='inline' id='mathml_8d0f638f81f0f69e9fbde1f67b7912ef239d507a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> a commutative <a class='existingWikiWord' href='/nlab/show/ring'>ring</a>, there is a <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+2-category'>symmetric monoidal bicategory</a> <math class='maruku-mathml' display='inline' id='mathml_8d0f638f81f0f69e9fbde1f67b7912ef239d507a_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Alg(R)</annotation></semantics></math> whose</p>
+<p>For <math class='maruku-mathml' display='inline' id='mathml_36b458ab3b03de3d6f8acae715c402fae9400ffd_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math> a commutative <a class='existingWikiWord' href='/nlab/show/ring'>ring</a>, there is a <a class='existingWikiWord' href='/nlab/show/symmetric+monoidal+2-category'>symmetric monoidal bicategory</a> <math class='maruku-mathml' display='inline' id='mathml_36b458ab3b03de3d6f8acae715c402fae9400ffd_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>Alg</mi><mo stretchy='false'>(</mo><mi>R</mi><mo stretchy='false'>)</mo></mrow><annotation encoding='application/x-tex'>Alg(R)</annotation></semantics></math> whose</p>
 
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/object'>object</a>s are <math class='maruku-mathml' display='inline' id='mathml_8d0f638f81f0f69e9fbde1f67b7912ef239d507a_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a>s;</p>
+<p><a class='existingWikiWord' href='/nlab/show/object'>object</a>s are <math class='maruku-mathml' display='inline' id='mathml_36b458ab3b03de3d6f8acae715c402fae9400ffd_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>-<a class='existingWikiWord' href='/nlab/show/algebra'>algebra</a>s;</p>
 </li>
 
 <li>
@@ -780,7 +780,7 @@ margin-left: 0em;
 </li>
 </ul>
 
-<p>The monoidal product is given by <a class='existingWikiWord' href='/nlab/show/tensor+product'>tensor product</a> over <math class='maruku-mathml' display='inline' id='mathml_8d0f638f81f0f69e9fbde1f67b7912ef239d507a_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>.</p>
+<p>The monoidal product is given by <a class='existingWikiWord' href='/nlab/show/tensor+product'>tensor product</a> over <math class='maruku-mathml' display='inline' id='mathml_36b458ab3b03de3d6f8acae715c402fae9400ffd_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>R</mi></mrow><annotation encoding='application/x-tex'>R</annotation></semantics></math>.</p>
 
 <p>By <a class='existingWikiWord' href='/nlab/show/delooping'>delooping</a> this once, this gives an example of a <a class='existingWikiWord' href='/nlab/show/tricategory'>tricategory</a> with a single object.</p>
 
@@ -921,12 +921,6 @@ margin-left: 0em;
  
  
  
- 
- 
- 
- 
- 
- 
 </p>
 
 <p>
@@ -935,14 +929,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on June 21, 2015 11:29:22 
+  Revised on October 10, 2017 16:59:33 
   by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
-  (108.247.151.220)
+  (76.167.222.204)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/monoidal+bicategory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/monoidal+bicategory/14" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(14 revisions)</span> | <a href="/nlab/show/diff/monoidal+bicategory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/monoidal+bicategory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/monoidal+bicategory" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/monoidal+bicategory/15" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(15 revisions)</span> | <a href="/nlab/show/diff/monoidal+bicategory" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/monoidal+bicategory" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
